hard-gists/4598017/run.log
=== Docker Run Log for 4598017 ===
Started at: Mi 29. Okt 14:45:07 CET 2025

[2025-10-29 14:45:07] START: Running container for 4598017
[2025-10-29 14:45:08] SUCCESS: Container a8804654506a68b9f049de812d9e965638cef245d4f8a1e88306abef86a72eae started for 4598017
=== Container logs for 4598017 ===
  File "/snippet.py", line 36
    print str(obj['id']) + ': ' + obj['name']
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4598017 ===
[2025-10-29 14:45:10] INFO: Container a8804654506a68b9f049de812d9e965638cef245d4f8a1e88306abef86a72eae has stopped
